--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 server.port = 9000
 # Configuração do drive do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/mycash?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrival=true
-spring.datasource.username=root
-spring.datasource.password=pr3t3nd3r
+spring.datasource.username=leonardo
+spring.datasource.password=#Pr3t3nd3r
