--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port = 9000
 spring.datasource.url=jdbc:mysql://localhost:3306/mycash?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=leonardo
 spring.datasource.password=#Pr3t3nd3r
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 AllowPublicKeyRetrival=True
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5InnDBDialect
