--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-# Esta porta será colocada para substituir a porta padrão 8080
+# PORTA ONDE VAI SER EXECUTADO O TOMCAT
 server.port = 9000
-# Configuração do drive do banco de dados
-spring.datasource.url=jdbc:mysql://localhost:3306/mycash?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrival=true
-spring.datasource.username=leonardo
-spring.datasource.password=#Pr3t3nd3r
+
+# INFORMAÇÕES PARA CONEXÃO COM O BANCO DE DADOS MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/mycash?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 AllowPublicKeyRetrival=True
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5InnDBDialect
+#Dialeto SQL para melhorar as instruções slq geradas pelo hibernate
+#Facilita as instruções a seguirem o padrão mais simples visando o dialeto do mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
