--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 9000
 # INFORMAÇÕES PARA CONEXÃO COM O BANCO DE DADOS MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/mycash?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=springuser
-spring.datasource.password=#ThePassword
+spring.datasource.password=#P4ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 AllowPublicKeyRetrival=True
 #Dialeto SQL para melhorar as instruções slq geradas pelo hibernate
