--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ AllowPublicKeyRetrival=True
 #Dialeto SQL para melhorar as instruções slq geradas pelo hibernate
 #Facilita as instruções a seguirem o padrão mais simples visando o dialeto do mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
